--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "jquery-ajax": "^2.1.4",
     "lodash": "^4.17.11",
     "qs": "^6.5.2",
     "vue": "^2.5.17",
@@ -19,6 +20,7 @@
     "@vue/cli-plugin-babel": "^3.0.3",
     "@vue/cli-plugin-eslint": "^3.0.3",
     "@vue/cli-service": "^3.0.3",
+    "vue-router-back-button": "^1.1.1",
     "vue-template-compiler": "^2.5.17"
   },
   "eslintConfig": {
